--- a/Beers/en.lproj/Localizable.strings
+++ b/Beers/en.lproj/Localizable.strings
@@ -5,4 +5,4 @@
   Created by Sergi Rojas on 21/02/2020.
   Copyright © 2020 Sergi Rojas. All rights reserved.
 */
-Type_here_your_food="Type here your food";
+food_pairing_sb_ph="Type food pairing here";
