--- a/Beers/es.lproj/Localizable.strings
+++ b/Beers/es.lproj/Localizable.strings
@@ -5,4 +5,4 @@
   Created by Sergi Rojas on 21/02/2020.
   Copyright © 2020 Sergi Rojas. All rights reserved.
 */
-Type_here_your_food="¿Con que quiere tomar la cerveza?";
+food_pairing_sb_ph="¿Con que quiere casar la cerveza?";
