Basic app functionality, done

--- a/Beers/es.lproj/Localizable.strings
+++ b/Beers/es.lproj/Localizable.strings
@@ -6,3 +6,4 @@
   Copyright © 2020 Sergi Rojas. All rights reserved.
 */
 food_pairing_sb_ph="¿Con que quiere casar la cerveza?";
+navbar_main_title="Beer&Food";
