--- a/Beers/ca.lproj/Localizable.strings
+++ b/Beers/ca.lproj/Localizable.strings
@@ -6,3 +6,4 @@
   Copyright © 2020 Sergi Rojas. All rights reserved.
 */
 food_pairing_sb_ph="Amb què vol maridar la cervesa?";
+navbar_main_title="Beer&Food";
