--- a/Beers/en.lproj/Localizable.strings
+++ b/Beers/en.lproj/Localizable.strings
@@ -6,3 +6,4 @@
   Copyright © 2020 Sergi Rojas. All rights reserved.
 */
 food_pairing_sb_ph="Type food pairing here";
+navbar_main_title="Beer&Food";
