--- a/Beers/ca.lproj/Localizable.strings
+++ b/Beers/ca.lproj/Localizable.strings
@@ -8,3 +8,4 @@
 food_pairing_sb_ph="Amb què vol maridar la cervesa?";
 navbar_main_title="Beer&Food";
 abv="Alc.";
+order_by_abv="Ordenat segons ABV";
