--- a/Beers/es.lproj/Localizable.strings
+++ b/Beers/es.lproj/Localizable.strings
@@ -8,3 +8,4 @@
 food_pairing_sb_ph="¿Con que quiere casar la cerveza?";
 navbar_main_title="Beer&Food";
 abv="Alc.";
+order_by_abv="Ordenado por ABV";
